# mangobar

./: .flake8  .gitignore  AGENTS.md  README.md  config.py  pyproject.toml  style.css  test_media_widget.sh
assets/layouts/: preview.html
modules/: audio.py  cpu.py  date.py  gpu.py  layout.py  media.py  tags.py  theme_switcher.py  time.py  uptime.py
scripts/: update_icon_color.py
services/: animator.py  mango.py  theme_manager.py
themes/: catppuccin-mocha.css  dracula.css  gruvbox.css  nord.css  tokyo-night-storm.css
widgets/: animated_circular_progress_bar.py
